[workspace]
resolver = "2"
members = [
    "audiod",
    "daemon",
    "init",
    "initfs",
    "initfs/archive-common",
    "initfs/tools",
    "ipcd",
    "logd",
    "netstack",
    "ptyd",
    "ramfs",
    "randd",
    "zerod",

    "drivers/common",
    "drivers/executor",

    "drivers/acpid",
    "drivers/hwd",
    "drivers/pcid",
    "drivers/pcid-spawner",
    "drivers/rtcd",
    "drivers/vboxd",
    "drivers/inputd",
    "drivers/virtio-core",

    "drivers/audio/ac97d",
    "drivers/audio/ihdad",
    "drivers/audio/sb16d",

    "drivers/graphics/bgad",
    "drivers/graphics/console-draw",
    "drivers/graphics/fbbootlogd",
    "drivers/graphics/driver-graphics",
    "drivers/graphics/fbcond",
    "drivers/graphics/graphics-ipc",
    "drivers/graphics/ihdgd",
    "drivers/graphics/vesad",
    "drivers/graphics/virtio-gpud",

    "drivers/input/ps2d",
    "drivers/input/usbhidd",

    "drivers/net/driver-network",
    "drivers/net/e1000d",
    "drivers/net/ixgbed",
    "drivers/net/rtl8139d",
    "drivers/net/rtl8168d",
    "drivers/net/virtio-netd",

    "drivers/redoxerd",

    "drivers/storage/ahcid",
    "drivers/storage/bcm2835-sdhcid",
    "drivers/storage/driver-block",
    "drivers/storage/ided",
    "drivers/storage/lived",          # TODO: not really a driver...
    "drivers/storage/nvmed",
    "drivers/storage/usbscsid",
    "drivers/storage/virtio-blkd",

    "drivers/usb/xhcid",
    "drivers/usb/usbctl",
    "drivers/usb/usbhubd",
]


# Bootstrap needs it's own profile configuration
exclude = ["bootstrap"]

# Low-level Redox OS crates should be kept in sync using workspace dependencies
# Remember to also update bootstrap dependencies, those are not in the workspace
[workspace.dependencies]
anyhow = "1"
libc = "0.2.180"
log = "0.4"
libredox = "0.1.12"
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient" }
redox_event = "0.4.3"
redox-ioctl = { git = "https://gitlab.redox-os.org/redox-os/relibc.git" }
redox-log = { git = "https://gitlab.redox-os.org/redox-os/redox-log.git" }
redox-rt = { git = "https://gitlab.redox-os.org/redox-os/relibc.git", default-features = false }
redox-scheme = "0.9.0"
redox_syscall = "0.7"
redox_termios = "0.1.3"

[patch.crates-io]
# Rustix doesn't support ioctls on Redox OS
rustix = { git = "https://github.com/jackpot51/rustix.git", branch = "redox-ioctl" }
drm = { git = "https://github.com/Smithay/drm-rs.git" }
drm-sys = { git = "https://github.com/Smithay/drm-rs.git" }

[patch."https://gitlab.redox-os.org/redox-os/relibc.git"]
#redox-rt = { path = "../../relibc/source/redox-rt" }
#redox-ioctl = { path = "../../relibc/source/redox-ioctl" }
