[package]
name = "audiod"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"

[dependencies]
daemon = { path = "../daemon" }
redox_syscall = { workspace = true, features = ["std"] }
libc.workspace = true
libredox = { workspace =  true, features = ["mkns"] }
redox-scheme.workspace = true
anyhow.workspace = true
ioslice = "0.6.0"
