[package]
name = "redox-initfs"
version = "0.2.0"
authors = ["4lDO2 <4lDO2@protonmail.com>", "Kamil Koczurek <koczurekk@gmail.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain = "0.2"

[features]
default = ["std"]

std = []

[dev-dependencies]
# FIXME remove loggers
anyhow.workspace = true
archive-common = {path = "archive-common"}
env_logger = "0.8"
log.workspace = true
