[package]
edition = "2018"
name = "ipcd"
version = "0.1.0"

[dependencies]
libredox = { version = "0.1.8", features = ["call"]}
daemon = { path = "../daemon" }
redox_syscall = "0.5.17"
redox-scheme = "0.8.0"
redox_event = "0.4.0"
anyhow = "1.0.97"
libc = "0.2"
rand = { version = "0.8", features = ["small_rng"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox-rt = { git = "https://gitlab.redox-os.org/redox-os/relibc.git", default-features = false }
