[package]
edition = "2018"
name = "ipcd"
version = "0.1.0"

[dependencies]
libredox = { workspace = true, features = ["call"]}
daemon = { path = "../daemon" }
redox_syscall.workspace = true
redox-scheme.workspace = true
redox_event.workspace = true
anyhow.workspace = true
libc.workspace = true
rand = { version = "0.8", features = ["small_rng"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox-rt = { workspace = true, default-features = false }
