[package]
name = "redox_netstack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smolnetd"
path = "src/main.rs"

[dependencies]
redox_event = "0.4.1"
daemon = { path = "../daemon" }
redox_syscall = { version = "0.5", features = ["std"] }
redox-log = "0.1"
libredox = { version = "0.1.3", features = ["mkns"] }
anyhow = "1.0.81"
#redox-scheme = "0.5.0"
redox-scheme = { git = "https://gitlab.redox-os.org/redox-os/redox-scheme.git" }

[dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_warn"]

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
    "std",
    "medium-ethernet", "medium-ip",
    "proto-ipv4",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-tcp-cubic",
    "iface-max-addr-count-8",
    "log"
]
#For debugging: "log", "verbose"
