[package]
name = "ramfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "In-memory filesystem for Redox, which is useful for early logging"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redox-daemon = "0.1.2"
redox_syscall = "0.5.11"
redox-scheme = "0.6.2"
libredox = "0.1.3"
indexmap = "2.5.0"
slab = "0.4.9"
