[package]
name = "ramfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "In-memory filesystem for Redox, which is useful for early logging"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemon = { path = "../daemon" }
redox_syscall = "0.5.10"
redox-scheme = "0.5"
libredox = "0.1.3"
indexmap = "2.5.0"
slab = "0.4.9"
