[package]
name = "redox-initfs-ar"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "Archive a directory into a Redox initfs image"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33"
env_logger = "0.8"
log = "0.4"
plain = "0.2"

redox-initfs = { path = ".." }
