[package]
name = "utils"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/redox_initfs_package.rs"
name = "redox-initfs-package"

[dependencies]
anyhow = "1"
clap = "2.33"
plain = "0.2"

redox-initfs = { path = ".." }
