[package]
name = "acpid"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = { git = "https://github.com/tomekatomek123456789/acpi.git" }
log.workspace = true
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
plain = "0.2.3"
redox_syscall.workspace = true
redox_event.workspace = true
rustc-hash = "1.1.0"
thiserror = "1"
ron = "0.8.1"
arrayvec = "0.7.6"
serde = { version = "1.0.228", features = ["derive"] }

amlserde = { path = "../amlserde" }
common = { path = "../common" }
daemon = { path = "../../daemon" }
libredox.workspace = true
redox-scheme.workspace = true
