[package]
name = "inputd"
version = "0.1.0"
edition = "2021"
authors = ["Anhad Singh <andypython@protonmail.com>"]

[dependencies]
anyhow = "1.0.71"
log.workspace = true
redox_syscall = { workspace = true, features = ["std"] }
orbclient.workspace = true
libredox.workspace = true

common = { path = "../common" }
daemon = { path = "../../daemon" }
redox-scheme.workspace = true
