[package]
name = "pcid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pcid"
path = "src/main.rs"

[lib]
name = "pcid_interface"
path = "src/lib.rs"

[dependencies]
bincode = "1.2"
fdt = "0.1.5"
libc.workspace = true
log.workspace = true
pci_types = "0.10"
pico-args = { version = "0.5", features = ["combined-flags"] }
plain = "0.2"
redox-scheme.workspace = true
redox_syscall.workspace = true
serde = { version = "1", features = ["derive"] }

common = { path = "../common" }
daemon = { path = "../../daemon" }
libredox.workspace = true
