[package]
name = "virtio-core"
version = "0.1.0"
edition = "2021"
authors = ["Anhad Singh <andypython@protonmail.com>"]

[dependencies]
static_assertions = "1.1.0"
bitflags = "2.3.2"
redox_syscall.workspace = true
libredox.workspace = true
log.workspace = true
thiserror = "1.0.40"
futures = { version = "0.3.28", features = ["executor"] }
crossbeam-queue = "0.3.8"

redox_event.workspace = true

common = { path = "../common" }
pcid = { path = "../pcid" }
