[package]
name = "ac97d"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
common = { path = "../../common" }
libredox = "0.1.3"
log = "0.4"
redox_event = "0.4.1"
redox_syscall = "0.6"
spin = "0.9"

daemon = { path = "../../../daemon" }
pcid = { path = "../../pcid" }
redox-scheme = "0.8.3"
