[package]
name = "ihdad"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
libredox.workspace = true
log.workspace = true
redox_event.workspace = true
redox_syscall.workspace = true
spin = "0.9"

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
pcid = { path = "../../pcid" }
redox-scheme.workspace = true
