[package]
name = "sb16d"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
common = { path = "../../common" }
libredox.workspace = true
log.workspace = true
daemon = { path = "../../../daemon" }
redox_event.workspace = true
redox_syscall.workspace = true
spin = "0.9"
redox-scheme.workspace = true
