[package]
name = "bgad"
version = "0.1.0"
edition = "2021"

[dependencies]
orbclient = "0.3.47"
log = "0.4"
redox-scheme = "0.8.3"
redox_syscall = "0.6"

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
inputd = { path = "../../inputd" }
pcid = { path = "../../pcid" }
libredox = "0.1.3"
