[package]
name = "bgad"
version = "0.1.0"
edition = "2021"

[dependencies]
orbclient.workspace = true
log.workspace = true
redox-scheme.workspace = true
redox_syscall.workspace = true

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
inputd = { path = "../../inputd" }
pcid = { path = "../../pcid" }
libredox.workspace = true
