[package]
name = "driver-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
drm-sys = "0.8.0"
log.workspace = true
redox-scheme.workspace = true
redox_syscall.workspace = true
libredox.workspace = true

common = { path = "../../common" }
graphics-ipc = { path = "../graphics-ipc" }
inputd = { path = "../../inputd" }
