[package]
name = "fbbootlogd"
version = "0.1.0"
edition = "2021"

[dependencies]
orbclient = "0.3.27"
ransid = "0.4"
redox_event = "0.4"
redox_syscall = "0.5"
redox-scheme = "0.6.2"

console-draw = { path = "../console-draw" }
daemon = { path = "../../../daemon" }
graphics-ipc = { path = "../graphics-ipc" }
inputd = { path = "../../inputd" }
libredox = "0.1.3"

[features]
default = []
