[package]
name = "fbbootlogd"
version = "0.1.0"
edition = "2021"

[dependencies]
drm = "0.14.1"
orbclient.workspace = true
ransid = "0.4"
redox_event.workspace = true
redox_syscall.workspace = true
redox-scheme.workspace = true

console-draw = { path = "../console-draw" }
daemon = { path = "../../../daemon" }
graphics-ipc = { path = "../graphics-ipc" }
inputd = { path = "../../inputd" }
libredox.workspace = true

[features]
default = []
