[package]
name = "fbcond"
version = "0.1.0"
edition = "2021"

[dependencies]
drm = "0.14.1"
log.workspace = true
orbclient.workspace = true
ransid = "0.4"
redox_event.workspace = true
redox_syscall.workspace = true
redox-scheme.workspace = true

common = { path = "../../common" }
console-draw = { path = "../console-draw" }
daemon = { path = "../../../daemon" }
graphics-ipc = { path = "../graphics-ipc" }
inputd = { path = "../../inputd" }
libredox.workspace = true

[features]
default = []
