[package]
name = "ps2d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1"
log.workspace = true
orbclient.workspace = true
redox_event.workspace = true
redox_syscall.workspace = true
redox-scheme.workspace = true
libredox.workspace = true

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
inputd = { path = "../../inputd" }
