[package]
name = "usbhidd"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
log = "0.4"
orbclient = { workspace = true }
redox_syscall = "0.6"
rehid = { git = "https://gitlab.redox-os.org/redox-os/rehid.git" }
xhcid = { path = "../../usb/xhcid" }

common = { path = "../../common" }
inputd = { path = "../../inputd" }
