[package]
name = "e1000d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "2"
log.workspace = true
libredox.workspace = true
redox_event.workspace = true
redox_syscall.workspace = true

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
driver-network = { path = "../driver-network" }
pcid = { path = "../../pcid" }
