[package]
name = "ixgbed"
version = "1.0.0"
edition = "2021"

[dependencies]
bitflags = "2"
libredox = "0.1.3"
redox_event = "0.4.1"
redox_syscall = "0.5"

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
driver-network = { path = "../driver-network" }
pcid = { path = "../../pcid" }
