[package]
name = "ixgbed"
version = "1.0.0"
edition = "2021"

[dependencies]
bitflags = "2"
libredox.workspace = true
redox_event.workspace = true
redox_syscall.workspace = true

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
driver-network = { path = "../driver-network" }
pcid = { path = "../../pcid" }
